...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/top_container_padding">

        <ImageButton
            android:id="@+id/infoImageButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:background="@color/transparent"
            android:scaleType="center"
            app:tint="@color/gray_400"
            android:src="@drawable/btn_info"
...
