<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/infoDialog"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_transparent"
    android:layout_marginBottom="@dimen/navigation_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/closeImageButton"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/pop_up_button_margin"
                android:background="@color/transparent"
                android:src="@drawable/btn_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
...
